test/cases/bad/bad059.lat
// class as expression

class A {
}

class B extends A {
}



int main() {
     cast<A>(B);
     return 0;
}